--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,11 @@
 <h1>MOVIES</h1>
-<h1>Lists</h1>
+<%# <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
+  </div> %>
+</div>
 <div id="lists">
   <% @lists.each do |list| %>
     <%= render list %>
@@ -8,3 +14,4 @@
     </p>
   <% end %>
 </div>
+   <%= link_to "Add category",new_list_path%>
