--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @list.name %></h1>
+<div class="card-category"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')"
+>
+  <%= @list.name %>
+</div>
 <div id="teams">
   <% @list.movies.each do |movie| %>
     <%= movie.title %>
@@ -15,3 +20,5 @@
 </div>
 <%= link_to "Boookmark", new_list_bookmark_path(@list) %>
 <%= link_to "Back", lists_path %>
+
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
